--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -261,7 +261,7 @@
             <div class="banner__inner">
                 <h3 class="title">#내_손으로_만들어_가는_루트</h3>
                 <p class="desc">
-                    다양하고 다채로운 도시의 모습은 이곳을 참조하세요!
+                    다양하고 다채로운 도시의 모습은 이곳을 참조하세요!<br>
                     <a href="" title="유튜브 페이지로 이동">https://www.youtube.com/channel/UCqVDpXKLmKeBU_yyt_QkItQ/</a>
                 </p>
                 <span class="small">도시 속 모습_01</span>
@@ -270,7 +270,7 @@
         <!-- //bannerType -->
 
         <section id="textType" class="nexon text__wrap section baegopa container">
-            <span>텍스트 유형01</span>
+            <span>도와드릴게요.</span>
             <h2 class="mb70">#어느걸_찾으세요?</h2>
             <div class="text__inner">
                 <div class="text t1">
