--- a/javascript/study/study_22.09/web_site_all.html
+++ b/javascript/study/study_22.09/web_site_all.html
@@ -1265,9 +1265,9 @@ document.querySelector("#olaga").addEventListener("click", ()=>{
                     <hr>
                     <h2 class="t_tit2">완성!</h2>
                     <p class="t_desc2">
-                        이미 저번 티스토리 스킨 만들기에서 수많은 치환자에 지쳐가지고 쌍으로 신경쓰다보니까 너무나 지치네요<br>
-                        아마 다시한번 해보라고 하면 못할것같네요 ^___^...<br>
-                        내일은 차 끌고 스타필드라도 가서 야무~~~~~~~~~지게 놀아야지~~~~ 제발 세일만 해줘,,,
+                        너무나 지쳤읍니다<br>
+                        오늘은 화요일 차를 빌렸는데 차가 주저 앉았읍니다<br>
+                        이보다 좋은 하루가 있을까요?
                     </p>
                     <div class="t_iframe" style="min-height : 750px; padding-top:0;">
                         <iframe src="https://kimsangjunv1.github.io/coding/site/site1/index" frameborder="0"></iframe>
